--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "start": "next dev",
-    "build": "next build",
+    "build": "next build --debug",
     "serve": "next start",
     "lint": "next lint",
     "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
@@ -14,9 +14,13 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
   },
   "dependencies": {
+    "@alchemy/aa-accounts": "^3.4.0",
+    "@alchemy/aa-alchemy": "^3.4.1",
+    "@alchemy/aa-core": "^3.4.0",
+    "@alchemy/aa-signers": "^3.4.0",
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
-    "@rainbow-me/rainbowkit": "1.3.0",
+    "@rainbow-me/rainbowkit": "1.3.6",
     "@simplewebauthn/browser": "^8.3.4",
     "@simplewebauthn/server": "^8.3.6",
     "@simplewebauthn/typescript-types": "^8.3.4",
@@ -26,6 +30,7 @@
     "axios": "^1.6.5",
     "blo": "^1.0.1",
     "daisyui": "^4.4.19",
+    "ethers": "^5.7.1",
     "next": "^14.0.4",
     "nprogress": "^0.2.0",
     "qrcode.react": "^3.1.0",
